<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/contact_first_and_last"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/contact_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:padding="15dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/contact_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:padding="15dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/contact_email"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/emails_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/contact_phone_number"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/phone_numbers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>