<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/contact_first_and_last"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/contact_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@color/colorBackground"
            android:hint="@string/contact_first_name"
            android:inputType="textCapSentences"
            android:padding="15dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/contact_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@color/colorBackground"
            android:hint="@string/contact_last_name"
            android:inputType="textCapSentences"
            android:padding="15dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/contact_email"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/emails_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="@color/colorBackground">

                <ImageView
                    android:id="@+id/add_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:src="@android:drawable/ic_input_add"/>

                <EditText
                    android:id="@+id/contact_email_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/add_email"
                    android:background="@color/transparent"
                    android:hint="@string/contact_email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textSize="18sp"/>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/contact_phone_number"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/phone_numbers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="@color/colorBackground">

                <ImageView
                    android:id="@+id/add_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:src="@android:drawable/ic_input_add"/>

                <EditText
                    android:id="@+id/contact_phone_number_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/add_phone_number"
                    android:background="@color/transparent"
                    android:hint="@string/contact_phone_number"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:textSize="18sp"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>